--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
         "php": ">=7.0.0",
         "darryldecode/cart": "~4.0",
         "fideloper/proxy": "~3.3",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "s-ichikawa/laravel-sendgrid-driver": "^2.1",
         "tymon/jwt-auth": "^0.5.12"
     },
     "require-dev": {
