--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "s-ichikawa/laravel-sendgrid-driver": "^2.1",
-        "tymon/jwt-auth": "^0.5.12"
+        "tymon/jwt-auth": "^0.5.12",
+        "unicodeveloper/laravel-paystack": "1.0.*"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
