--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
         "jquery": "^3.2",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
-        "vue": "^2.5.7"
+        "vue": "^2.6.10",
+        "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
         "vee-validate": "^2.1.5",
+        "vue-paystack": "^2.0.2",
         "vue-router": "^3.0.2",
         "vue-socialmedia-share": "^1.0.1",
         "vue-toasted": "^1.1.26",
