--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "bootstrap": "^4.3.1",
+        "bootstrap-vue": "^2.1.0",
         "vee-validate": "^2.1.5",
         "vue-paystack": "^2.0.2",
         "vue-router": "^3.0.2",
