--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "bootstrap": "^4.3.1",
         "bootstrap-vue": "^2.1.0",
+        "moment": "^2.24.0",
         "vee-validate": "^2.1.5",
         "vue-paystack": "^2.0.2",
         "vue-router": "^3.0.2",
