--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "bootstrap-vue": "^2.1.0",
         "moment": "^2.24.0",
         "vee-validate": "^2.1.5",
+        "vue-meta": "^2.3.1",
         "vue-paystack": "^2.0.2",
         "vue-router": "^3.0.2",
         "vue-socialmedia-share": "^1.0.1",
