--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,16 @@
 APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
+APP_ENV=production
+APP_KEY=base64:gHcYR1ZAB2BpHS/HbUPoGFPaVybQcCA8T7stPqEDuE4=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=https://testing.henrymoby.tech/
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=getfoods
+DB_USERNAME=dsrt47_root
+DB_PASSWORD=pass1234567
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
