--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ APP_URL=https://testing.henrymoby.tech/
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=getfoods
+DB_DATABASE=dstrt47_getfoods
 DB_USERNAME=dsrt47_root
 DB_PASSWORD=pass1234567
 
