customer survey page UI and vue star rating installation

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "vue-paystack": "^2.0.2",
         "vue-router": "^3.0.2",
         "vue-socialmedia-share": "^1.0.1",
+        "vue-star-rating": "^1.6.1",
         "vue-toasted": "^1.1.26",
         "vue2-animate": "^2.1.0",
         "vuetify": "^2.0.17"
