--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=production
 APP_KEY=base64:gHcYR1ZAB2BpHS/HbUPoGFPaVybQcCA8T7stPqEDuE4=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=https://testing.henrymoby.tech/
+APP_URL=https://getfoods.ng/
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
