adding local link localhost:8000

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,16 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:gHcYR1ZAB2BpHS/HbUPoGFPaVybQcCA8T7stPqEDuE4=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=https://localhost:8000/
+APP_URL=https://getfoods.ng/
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=dstrt47_getfoods
-DB_USERNAME=root
-DB_PASSWORD=''
+DB_USERNAME=dsrt47_root
+DB_PASSWORD=pass1234567
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
